# multimodal-ai

./: .gitignore
bert/: README.md
experiments/huggingface/: .gitignore  README.md
experiments/open_clip/: README.md
experiments/pytorch/: README.md
experiments/pytorch/clip_finetuning_flickr30k/: .gitignore  README.md  download_data.sh  test_labels.csv  train.py  train_labels.csv  translate_english_captions.py
kaggle/: README.md
kaggle/image-to-prompts/: README.md  train.py
multimodal-search/: README.md  pyproject.toml  requirements.txt
